[gd_scene load_steps=3 format=3 uid="uid://d08t0irb7urpi"]

[ext_resource type="Theme" uid="uid://slnkigsbr0l1" path="res://base_ui.tres" id="1_kmeap"]
[ext_resource type="Script" uid="uid://bqfv30g7t86j2" path="res://base_ui.gd" id="2_qki7l"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kmeap")
script = ExtResource("2_qki7l")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1020.0
offset_bottom = 600.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_right = 340.0
offset_bottom = 600.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="BoxContainerOne" type="BoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
vertical = true

[node name="Label" type="Label" parent="Panel/MarginContainer/BoxContainerOne"]
layout_mode = 2
text = "Label"

[node name="Button" type="Button" parent="Panel/MarginContainer/BoxContainerOne"]
layout_mode = 2
text = "Button
"

[node name="ToggleButton" type="Button" parent="Panel/MarginContainer/BoxContainerOne"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Toggle Button"

[node name="DisabledButton" type="Button" parent="Panel/MarginContainer/BoxContainerOne"]
layout_mode = 2
disabled = true
text = "Disabled Button"

[node name="FlatButton" type="Button" parent="Panel/MarginContainer/BoxContainerOne"]
layout_mode = 2
disabled = true
text = "Flat Button"
flat = true

[node name="CheckButton" type="CheckButton" parent="Panel/MarginContainer/BoxContainerOne"]
layout_mode = 2
text = "CheckButton"

[node name="CheckBox" type="CheckBox" parent="Panel/MarginContainer/BoxContainerOne"]
layout_mode = 2
text = "CheckBox"

[node name="MenuButton" type="MenuButton" parent="Panel/MarginContainer/BoxContainerOne"]
layout_mode = 2
text = "MenuButton"
item_count = 9
popup/item_0/text = "Item"
popup/item_0/id = 0
popup/item_1/text = "Disabled Item"
popup/item_1/id = 1
popup/item_1/disabled = true
popup/item_2/id = 2
popup/item_2/separator = true
popup/item_3/text = "Check Item"
popup/item_3/checkable = 1
popup/item_3/id = 3
popup/item_4/text = "Checked Item"
popup/item_4/checkable = 1
popup/item_4/checked = true
popup/item_4/id = 4
popup/item_5/id = 5
popup/item_5/separator = true
popup/item_6/text = "Radio Item"
popup/item_6/checkable = 2
popup/item_6/id = 6
popup/item_7/text = "Checked Radio Item"
popup/item_7/checkable = 2
popup/item_7/checked = true
popup/item_7/id = 7
popup/item_8/text = "Named Separator"
popup/item_8/id = 8
popup/item_8/separator = true

[node name="OptionButton" type="OptionButton" parent="Panel/MarginContainer/BoxContainerOne"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "OptionButton"
popup/item_0/id = 0
popup/item_1/text = "Has"
popup/item_1/id = 1
popup/item_2/text = "Many"
popup/item_2/id = 2
popup/item_3/text = "Options"
popup/item_3/id = 3

[node name="ColorPickerButton" type="ColorPickerButton" parent="Panel/MarginContainer/BoxContainerOne"]
layout_mode = 2
text = "Color Picker"

[node name="MarginContainerTwo" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -170.0
offset_right = 170.0
offset_bottom = 600.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="BoxContainerTwo" type="BoxContainer" parent="Panel/MarginContainerTwo"]
layout_mode = 2
vertical = true

[node name="LineEdit" type="LineEdit" parent="Panel/MarginContainerTwo/BoxContainerTwo"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "LineEdit"

[node name="DisabledLineEdit" type="LineEdit" parent="Panel/MarginContainerTwo/BoxContainerTwo"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Disabled LineEdit"
editable = false

[node name="TextEdit" type="TextEdit" parent="Panel/MarginContainerTwo/BoxContainerTwo"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
text = "TextEdit"

[node name="SpinBox" type="SpinBox" parent="Panel/MarginContainerTwo/BoxContainerTwo"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainerTwo/BoxContainerTwo"]
layout_mode = 2
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainerTwo/BoxContainerTwo/GridContainer"]
layout_mode = 2

[node name="VSlider" type="VSlider" parent="Panel/MarginContainerTwo/BoxContainerTwo/GridContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
value = 50.0

[node name="VScrollBar" type="VScrollBar" parent="Panel/MarginContainerTwo/BoxContainerTwo/GridContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="Panel/MarginContainerTwo/BoxContainerTwo/GridContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainerTwo/BoxContainerTwo/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="Panel/MarginContainerTwo/BoxContainerTwo/GridContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 75.0

[node name="HScrollBar" type="HScrollBar" parent="Panel/MarginContainerTwo/BoxContainerTwo/GridContainer/VBoxContainer"]
layout_mode = 2

[node name="HSlider2" type="HSlider" parent="Panel/MarginContainerTwo/BoxContainerTwo/GridContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainerTwo/BoxContainerTwo/GridContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ProgressBar" type="ProgressBar" parent="Panel/MarginContainerTwo/BoxContainerTwo/GridContainer/VBoxContainer"]
layout_mode = 2
value = 50.0

[node name="MarginContainerThree" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_left = 680.0
offset_right = 1020.0
offset_bottom = 600.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="BoxContainerThree" type="BoxContainer" parent="Panel/MarginContainerThree"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainerThree/BoxContainerThree"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="TabContainer" type="TabContainer" parent="Panel/MarginContainerThree/BoxContainerThree/VBoxContainer"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
current_tab = 0

[node name="Tab 1" type="Panel" parent="Panel/MarginContainerThree/BoxContainerThree/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Tab 2" type="Panel" parent="Panel/MarginContainerThree/BoxContainerThree/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Tab 3" type="Panel" parent="Panel/MarginContainerThree/BoxContainerThree/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Tree" type="Tree" parent="Panel/MarginContainerThree/BoxContainerThree/VBoxContainer"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
size_flags_vertical = 3
